--- a/Common-Service/src/main/resources/templates/hello.html
+++ b/Common-Service/src/main/resources/templates/hello.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <meta charset="UTF-8">
     <title>Hello World!!!</title>
 </head>
 <body>
-    <h1>Hello World!!!</h1>
+    <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
+    <form th:action="@{/login}" method="post">
+        <input type="submit" value="log out"/>
+    </form>
 </body>
 </html>
